Manual: Fix button tables according to guidelines
- Reference: Last comment at LatexGuidelinesTalk
- Thanks for pixelma for reporting


git-svn-id: svn://svn.rockbox.org/rockbox/trunk@23232 a1c6a512-1295-4272-9138-f99709370657

--- a/manual/configure_rockbox/system_options.tex
+++ b/manual/configure_rockbox/system_options.tex
@@ -213,405 +213,441 @@ this option \setting{On}. If it is not required, then turning this setting
     The following modes are available:
     \begin{description}
 
-      \item [Multimedia.] This mode lets you control the volume, playback, and
-        skips tracks on the host computer. It is equivalent for the multimedia
-        keys found on top of some multimedia keyboards.
-        \begin{table}
-          \begin{btnmap}{}{}
-            %
-            % Volume up / down
-            \opt{SANSA_E200_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
-              {\ButtonScrollFwd / \ButtonScrollBack}
-            \opt{GIGABEAT_S_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}
-              {\ButtonVolUp / \ButtonVolDown}
-            \opt{IRIVER_H10_PAD}{\ButtonScrollUp / \ButtonScrollDown}
-            \opt{MROBE100_PAD}{\ButtonUp / \ButtonDown}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}
-                {\ButtonRCVolUp / \ButtonRCVolDown}%
-            }
-            & Volume up / down, respectively \\
-            %
-            % Volume mute
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
-                ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}{\ButtonSelect}
-            \opt{GIGABEAT_S_PAD}{\ButtonSelect; \ButtonBack}
-            \opt{IRIVER_H10_PAD}{\ButtonFF}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD}{Long \ButtonRCFF}%
-              \opt{MROBE100_RC_PAD}{\ButtonRCHeart}%
-            }
-            & Volume mute \\
-            %
-            % Playback play / pause
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}{\ButtonUp}
-            \opt{IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD%
-                ,MROBE100_PAD}{\ButtonPlay}
-            \opt{GIGABEAT_S_PAD}{\ButtonPlay; \ButtonUp}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD}{\ButtonRCPlay}%
-              \opt{MROBE100_RC_PAD}{\ButtonRCPlay}%
-            }
-            & Play / Pause \\
-            %
-            % Playback stop
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
-            \opt{GIGABEAT_S_PAD}{\ButtonMenu; \ButtonDown}
-            \opt{SANSA_CLIP_PAD}{\ButtonHome}
-            \opt{IRIVER_H10_PAD}{\ButtonRew; Long \ButtonPlay}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
-              {\ButtonMenu; Long \ButtonPlay}
-            \opt{MROBE100_PAD}{\ButtonDisplay; Long {\ButtonPlay}}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD}{Long \ButtonRCPlay}%
-              \opt{MROBE100_RC_PAD}{\ButtonRCDisplay; Long \ButtonRCPlay}%
-            }
-            & Stop \\
-            %
-            % Scan previous track
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IRIVER_H10_PAD%
-                ,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
-              {\ButtonLeft}
-            \opt{GIGABEAT_RC_PAD}{\ButtonPrev; \ButtonLeft}%
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{\ButtonRCRew}%
-            }
-            & Scan previous track \\
-            %
-            % Scan next track
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IRIVER_H10_PAD%
-                ,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
-              {\ButtonRight}
-            \opt{GIGABEAT_RC_PAD}{\ButtonNext; \ButtonRight}%
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{\ButtonRCFF}%
-            }
-            & Scan next track \\
-          \end{btnmap}
-        \end{table}
+        \item [Multimedia.] This mode lets you control the volume, playback,
+        and skips tracks on the host computer. It is equivalent for the
+        multimedia keys found on top of some multimedia keyboards.
 
-      \item [Presentation.] This mode lets you control a presentation program
+        \begin{table}
+            \begin{btnmap}{}{}
+                % Volume up / down
+                \opt{SANSA_E200_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
+                    {\ButtonScrollFwd / \ButtonScrollBack}
+                \opt{GIGABEAT_S_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}
+                    {\ButtonVolUp / \ButtonVolDown}
+                \opt{IRIVER_H10_PAD}{\ButtonScrollUp / \ButtonScrollDown}
+                \opt{MROBE100_PAD}{\ButtonUp / \ButtonDown}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}
+                        {\ButtonRCVolUp / \ButtonRCVolDown}%
+                    &}
+                Volume up / down, respectively
+                \\
+     
+                % Volume mute
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
+                    ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}{\ButtonSelect}
+                \opt{GIGABEAT_S_PAD}{\ButtonSelect; \ButtonBack}
+                \opt{IRIVER_H10_PAD}{\ButtonFF}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD}{Long \ButtonRCFF}%
+                    \opt{MROBE100_RC_PAD}{\ButtonRCHeart}%
+                    &}
+                Volume mute
+                \\
+     
+                % Playback play / pause
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}{\ButtonUp}
+                \opt{IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD%
+                    ,MROBE100_PAD}{\ButtonPlay}
+                \opt{GIGABEAT_S_PAD}{\ButtonPlay; \ButtonUp}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD}{\ButtonRCPlay}%
+                    \opt{MROBE100_RC_PAD}{\ButtonRCPlay}%
+                    &}
+                Play / Pause
+                \\
+     
+                % Playback stop
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
+                \opt{GIGABEAT_S_PAD}{\ButtonMenu; \ButtonDown}
+                \opt{SANSA_CLIP_PAD}{\ButtonHome}
+                \opt{IRIVER_H10_PAD}{\ButtonRew; Long \ButtonPlay}
+                \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
+                    {\ButtonMenu; Long \ButtonPlay}
+                \opt{MROBE100_PAD}{\ButtonDisplay; Long {\ButtonPlay}}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD}{Long \ButtonRCPlay}%
+                    \opt{MROBE100_RC_PAD}{\ButtonRCDisplay; Long \ButtonRCPlay}%
+                    &}
+                Stop
+                \\
+     
+                % Scan previous track
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,%
+                    IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD%
+                    ,MROBE100_PAD}
+                    {\ButtonLeft}
+                \opt{GIGABEAT_RC_PAD}{\ButtonPrev; \ButtonLeft}%
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{\ButtonRCRew}%
+                    &}
+                Scan previous track
+                \\
+     
+                % Scan next track
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD%
+                    ,IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD%
+                    ,MROBE100_PAD}
+                    {\ButtonRight}
+                \opt{GIGABEAT_RC_PAD}{\ButtonNext; \ButtonRight}%
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{\ButtonRCFF}%
+                    &}
+                Scan next track
+                \\
+            \end{btnmap}
+        \end{table}
+ 
+        \item [Presentation.] This mode lets you control a presentation program
         (e.g. OpenOffice Impress, and some other popular application), making
         the \dap{} a wired remote control device. This mode is can be useful
         for lecturers who does not have a wireless remote control for this
         purpose.
-        \begin{table}
-          \begin{btnmap}{}{}
-            %
-            % Slideshow start
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}{\ButtonUp}
-            \opt{GIGABEAT_S_PAD}{\ButtonPlay; \ButtonUp}
-            \opt{IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD%
-                ,MROBE100_PAD}{\ButtonPlay}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{\ButtonRCPlay}%
-            }
-            & Slideshow start \\
-            %
-            % Slideshow leave
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
-            \opt{GIGABEAT_S_PAD}{Long \ButtonPlay; Long \ButtonUp}
-            \opt{SANSA_CLIP_PAD}{\ButtonHome}
-            \opt{IRIVER_H10_PAD}{Long \ButtonPlay}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{Long \ButtonPlay}
-            \opt{MROBE100_PAD}{\ButtonDisplay; Long \ButtonPlay}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{Long \ButtonRCPlay}%
-            }
-            & Slideshow leave \\
-            %
-            % Slide previous
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
-                ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}{\ButtonLeft}
-            \opt{GIGABEAT_S_PAD}{\ButtonPrev; \ButtonLeft}
-            \opt{IRIVER_H10_PAD}{\ButtonRew}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{\ButtonRCRew}%
-            }
-            & Slide previous \\
-            %
-            % Slide next
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
-                ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}{\ButtonRight}
-            \opt{GIGABEAT_S_PAD}{\ButtonNext; \ButtonRight}
-            \opt{IRIVER_H10_PAD}{\ButtonFF}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{\ButtonRCFF}%
-            }
-            & Slide next \\
-            %
-            % Slide first
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
-                ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}{Long \ButtonLeft}
-            \opt{GIGABEAT_S_PAD}{Long \ButtonPrev; Long \ButtonLeft}
-            \opt{IRIVER_H10_PAD}{Long \ButtonRew}
-            \opt{HAVEREMOTEKEYMAP}{
-                &
-                \opt{MROBE100_RC_PAD}{Long \ButtonRCRew}%
-            }
-            & Slide first \\
-            %
-            % Slide last
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
-                ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}{Long \ButtonRight}
-            \opt{GIGABEAT_S_PAD}{Long \ButtonNext; Long \ButtonRight}
-            \opt{IRIVER_H10_PAD}{Long \ButtonFF}
-            \opt{HAVEREMOTEKEYMAP}{
-                &
-                \opt{MROBE100_RC_PAD}{Long \ButtonRCFF}%
-            }
-            & Slide last \\
-            %
-            % Screen black
-            \opt{SANSA_E200_PAD,GIGABEAT_S_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}
-              {\ButtonDown}
-            \opt{IRIVER_H10_PAD}{\ButtonLeft}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
-              {\ButtonMenu}
-            \opt{HAVEREMOTEKEYMAP}{
-                &
-                \opt{MROBE100_RC_PAD}{\ButtonRCDisplay}%
-            }
-            & Blank screen \\
-            %
-            % Screen white
-            \opt{SANSA_E200_PAD,GIGABEAT_S_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}
-              {Long \ButtonDown}
-            \opt{IRIVER_H10_PAD}{Long \ButtonLeft}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
-              {Long \ButtonMenu}
-            \opt{HAVEREMOTEKEYMAP}{
-                &
-                \opt{MROBE100_RC_PAD}{Long \ButtonRCDisplay}%
-            }
-            & White screen \\
-            %
-            % Link previous / next
-            \opt{SANSA_E200_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
-              {\ButtonScrollBack / \ButtonScrollFwd}
-            \opt{GIGABEAT_S_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}
-              {\ButtonVolUp / \ButtonVolDown}
-            \opt{IRIVER_H10_PAD}{\ButtonScrollUp / \ButtonScrollDown}
-            \opt{MROBE100_PAD}{\ButtonUp / \ButtonDown}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}
-                {\ButtonRCVolUp / \ButtonRCVolDown}%
-            }
-            & Previous / next link in slide, respectively \\
-            %
-            % Mouse click
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
-                ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
-              {\ButtonSelect}
-            \opt{GIGABEAT_S_PAD}{\ButtonSelect; \ButtonBack}
-            \opt{IRIVER_H10_PAD}{\ButtonRight}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD}{Long \ButtonRCFF}%
-              \opt{MROBE100_RC_PAD}{\ButtonRCHeart}%
-            }
-            & Perform a 'mouse click' over a link \\
-            %
-            % Mouse over
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
-                ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
-              {Long \ButtonSelect}
-            \opt{GIGABEAT_S_PAD}{Long \ButtonSelect; Long \ButtonBack}
-            \opt{IRIVER_H10_PAD}{Long \ButtonRight}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD}{Long \ButtonRCRew}%
-              \opt{MROBE100_RC_PAD}{Long \ButtonRCHeart}%
-            }
-            & Perform a 'mouse over' over a link \\
-          \end{btnmap}
-        \end{table}
 
-      \item [Browser.] This mode lets you control a web browser (e.g. Firefox).
-        It uses the \dap{}'s keys to navigate through the web page and
-        different tabs, navigate through history, and to control zoom.
         \begin{table}
-          \begin{btnmap}{}{}
-            %
-            % Scroll up / down
-            \opt{SANSA_E200_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
-              {\ButtonScrollBack / \ButtonScrollFwd}
-            \opt{SANSA_C200_PAD,SANSA_CLIP_PAD}{\ButtonVolUp / \ButtonVolDown}
-            \opt{GIGABEAT_S_PAD}
-              {\ButtonPrev; \ButtonVolUp / \ButtonNext; \ButtonVolDown}
-            \opt{IRIVER_H10_PAD}{\ButtonScrollUp / \ButtonScrollDown}
-            \opt{MROBE100_PAD}{\ButtonUp / \ButtonDown}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}
-                {\ButtonRCVolUp / \ButtonRCVolDown}%
-            }
-            & Scroll up / down, respectively \\
-            %
-            % Scroll page up / page down
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}
-              {\ButtonUp / \ButtonDown}
-            \opt{GIGABEAT_S_PAD}{\ButtonUp / \ButtonDown}
-            \opt{IRIVER_H10_PAD}{\ButtonRew / \ButtonFF}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
-              {\ButtonPlay / \ButtonMenu}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{MROBE100_RC_PAD}{\ButtonRCPlay / \ButtonRCDisplay}%
-            }
-            & Scroll page up / page down, respectively \\
-            %
-            % Zoom in / out
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}
-              {Long \ButtonUp / Long \ButtonDown}
-            \opt{GIGABEAT_S_PAD}{Long \ButtonUp / Long \ButtonDown}
-            \opt{IRIVER_H10_PAD}{Long \ButtonRew / Long \ButtonFF}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
-              {Long \ButtonPlay / Long \ButtonMenu}
-            \opt{HAVEREMOTEKEYMAP}{
-                &
-                \opt{GIGABEAT_RC_PAD}{Long \ButtonRCFF / Long \ButtonRCRew}%
-                \opt{MROBE100_RC_PAD}
-                  {Long \ButtonRCPlay / Long \ButtonRCDisplay}%
-            }
-            & Zoom in / out, respectively \\
-            %
-            % Zoom reset
-            \opt{SANSA_E200_PAD}{Long \ButtonSelect; Long \ButtonUp+\ButtonDown}
-            \opt{MROBE100_PAD}{Long \ButtonSelect; Long \ButtonPlay+\ButtonMenu}
-            \opt{SANSA_CLIP_PAD,SANSA_C200_PAD}
-              {Long \ButtonSelect; Long \ButtonUp+\ButtonDown}
-            \opt{GIGABEAT_S_PAD}{Long \ButtonSelect; Long \ButtonUp+\ButtonDown}
-            \opt{IRIVER_H10_PAD}{Long \ButtonRew+\ButtonFF}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
-              {Long \ButtonPlay+\ButtonMenu}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD}{Long \ButtonRCFF+\ButtonRCRew}%
-              \opt{MROBE100_RC_PAD}{Long \ButtonRCHeart}%
-            }
-            & Zoom reset \\
-            %
-            % Tab previous / next
-            \opt{SANSA_E200_PAD,GIGABEAT_S_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD%
-                ,IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD%
-                ,MROBE100_PAD}
-              {\ButtonLeft / \ButtonRight}
-            \opt{HAVEREMOTEKEYMAP}{
-                &
-                \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}
-                  {\ButtonRCRew / \ButtonRCFF}%
-            }
-            & Tab previous / next, respectively \\
-            %
-            % Tab close
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD}{Long \ButtonPower}
-            \opt{GIGABEAT_S_PAD}{Long \ButtonPlay; Long \ButtonBack}
-            \opt{SANSA_CLIP_PAD}{Long \ButtonHome}
-            \opt{IRIVER_H10_PAD}{Long \ButtonLeft+\ButtonRight}
-            \opt{MROBE100_PAD}{Long \ButtonDisplay}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
-              {Long \ButtonSelect+\ButtonMenu}
-            \opt{HAVEREMOTEKEYMAP}{
-                &
-                \opt{GIGABEAT_RC_PAD}{Long \ButtonRCPlay}%
-            }
-            & Tab close \\
-            %
-            % History back / forward
-            \opt{SANSA_E200_PAD,GIGABEAT_S_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD%
-            ,IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
-              {Long \ButtonLeft / Long \ButtonRight}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{MROBE100_RC_PAD}
-                {Long \ButtonRCRew / Long \ButtonRCFF}%
-            }
-            & History back / forward \\
-            %
-            % View full-screen
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,GIGABEAT_S_PAD%
-                ,MROBE100_PAD}
-              {\ButtonSelect}
-            \opt{IRIVER_H10_PAD}{\ButtonPlay}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
-              {Long \ButtonSelect+\ButtonPlay}
-            \opt{HAVEREMOTEKEYMAP}{
-              &
-              \opt{GIGABEAT_RC_PAD}{\ButtonRCPlay}%
-              \opt{MROBE100_RC_PAD}{\ButtonRCHeart}%
-            }
-            & View full-screen toggle \\
-          \end{btnmap}
-        \end{table}
+            \begin{btnmap}{}{}
+                % Slideshow start
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}{\ButtonUp}
+                \opt{GIGABEAT_S_PAD}{\ButtonPlay; \ButtonUp}
+                \opt{IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD%
+                    ,MROBE100_PAD}{\ButtonPlay}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{\ButtonRCPlay}%
+                    &}
+                Slideshow start
+                \\
 
-      {\opt{usb_hid_mouse}{
-      \item [Mouse.] This mode emulates a mouse. Features supported: Mouse
+                % Slideshow leave
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
+                \opt{GIGABEAT_S_PAD}{Long \ButtonPlay; Long \ButtonUp}
+                \opt{SANSA_CLIP_PAD}{\ButtonHome}
+                \opt{IRIVER_H10_PAD}{Long \ButtonPlay}
+                \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}{Long \ButtonPlay}
+                \opt{MROBE100_PAD}{\ButtonDisplay; Long \ButtonPlay}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{Long \ButtonRCPlay}%
+                    &}
+                Slideshow leave
+                \\
+
+                % Slide previous
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
+                    ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}{\ButtonLeft}
+                \opt{GIGABEAT_S_PAD}{\ButtonPrev; \ButtonLeft}
+                \opt{IRIVER_H10_PAD}{\ButtonRew}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                  \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{\ButtonRCRew}%
+                  &}
+                Slide previous
+                \\
+
+                % Slide next
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
+                    ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}{\ButtonRight}
+                \opt{GIGABEAT_S_PAD}{\ButtonNext; \ButtonRight}
+                \opt{IRIVER_H10_PAD}{\ButtonFF}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}{\ButtonRCFF}%
+                    &}
+                Slide next
+                \\
+
+                % Slide first
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
+                    ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}{Long \ButtonLeft}
+                \opt{GIGABEAT_S_PAD}{Long \ButtonPrev; Long \ButtonLeft}
+                \opt{IRIVER_H10_PAD}{Long \ButtonRew}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{MROBE100_RC_PAD}{Long \ButtonRCRew}%
+                    &}
+                Slide first
+                \\
+
+                % Slide last
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
+                    ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}{Long \ButtonRight}
+                \opt{GIGABEAT_S_PAD}{Long \ButtonNext; Long \ButtonRight}
+                \opt{IRIVER_H10_PAD}{Long \ButtonFF}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{MROBE100_RC_PAD}{Long \ButtonRCFF}%
+                    &}
+                Slide last
+                \\
+
+                % Screen black
+                \opt{SANSA_E200_PAD,GIGABEAT_S_PAD,SANSA_C200_PAD&
+                    ,SANSA_CLIP_PAD}{\ButtonDown}
+                \opt{IRIVER_H10_PAD}{\ButtonLeft}
+                \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
+                    {\ButtonMenu}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{MROBE100_RC_PAD}{\ButtonRCDisplay}%
+                    &}
+                Blank screen
+                \\
+
+                % Screen white
+                \opt{SANSA_E200_PAD,GIGABEAT_S_PAD,SANSA_C200_PAD%
+                    ,SANSA_CLIP_PAD}{Long \ButtonDown}
+                \opt{IRIVER_H10_PAD}{Long \ButtonLeft}
+                \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
+                    {Long \ButtonMenu}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{MROBE100_RC_PAD}{Long \ButtonRCDisplay}%
+                    &}
+                White screen
+                \\
+
+                % Link previous / next
+                \opt{SANSA_E200_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
+                    {\ButtonScrollBack / \ButtonScrollFwd}
+                \opt{GIGABEAT_S_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}
+                    {\ButtonVolUp / \ButtonVolDown}
+                \opt{IRIVER_H10_PAD}{\ButtonScrollUp / \ButtonScrollDown}
+                \opt{MROBE100_PAD}{\ButtonUp / \ButtonDown}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}
+                        {\ButtonRCVolUp / \ButtonRCVolDown}%
+                    &}
+                Previous / next link in slide, respectively
+                \\
+
+                % Mouse click
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
+                    ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
+                    {\ButtonSelect}
+                \opt{GIGABEAT_S_PAD}{\ButtonSelect; \ButtonBack}
+                \opt{IRIVER_H10_PAD}{\ButtonRight}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD}{Long \ButtonRCFF}%
+                    \opt{MROBE100_RC_PAD}{\ButtonRCHeart}%
+                    &}
+                Perform a 'mouse click' over a link
+                \\
+
+                % Mouse over
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
+                    ,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}{Long \ButtonSelect}
+                \opt{GIGABEAT_S_PAD}{Long \ButtonSelect; Long \ButtonBack}
+                \opt{IRIVER_H10_PAD}{Long \ButtonRight}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD}{Long \ButtonRCRew}%
+                    \opt{MROBE100_RC_PAD}{Long \ButtonRCHeart}%
+                    &}
+                Perform a 'mouse over' over a link
+                \\
+            \end{btnmap}
+        \end{table}
+ 
+        \item [Browser.] This mode lets you control a web browser (e.g. 
+        Firefox). It uses the \dap{}'s keys to navigate through the web page
+        and different tabs, navigate through history, and to control zoom.
+
+        \begin{table}
+            \begin{btnmap}{}{}
+                % Scroll up / down
+                \opt{SANSA_E200_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
+                    {\ButtonScrollBack / \ButtonScrollFwd}
+                \opt{SANSA_C200_PAD,SANSA_CLIP_PAD}
+                    {\ButtonVolUp / \ButtonVolDown}
+                \opt{GIGABEAT_S_PAD}
+                    {\ButtonPrev; \ButtonVolUp / \ButtonNext; \ButtonVolDown}
+                \opt{IRIVER_H10_PAD}{\ButtonScrollUp / \ButtonScrollDown}
+                \opt{MROBE100_PAD}{\ButtonUp / \ButtonDown}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}
+                        {\ButtonRCVolUp / \ButtonRCVolDown}%
+                  &}
+                Scroll up / down, respectively
+                \\
+
+                % Scroll page up / page down
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}
+                    {\ButtonUp / \ButtonDown}
+                \opt{GIGABEAT_S_PAD}{\ButtonUp / \ButtonDown}
+                \opt{IRIVER_H10_PAD}{\ButtonRew / \ButtonFF}
+                \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
+                    {\ButtonPlay / \ButtonMenu}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{MROBE100_RC_PAD}{\ButtonRCPlay / \ButtonRCDisplay}%
+                    &}
+                Scroll page up / page down, respectively
+                \\
+
+                % Zoom in / out
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD}
+                    {Long \ButtonUp / Long \ButtonDown}
+                \opt{GIGABEAT_S_PAD}{Long \ButtonUp / Long \ButtonDown}
+                \opt{IRIVER_H10_PAD}{Long \ButtonRew / Long \ButtonFF}
+                \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD,MROBE100_PAD}
+                    {Long \ButtonPlay / Long \ButtonMenu}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD}{Long \ButtonRCFF / Long \ButtonRCRew}%
+                    \opt{MROBE100_RC_PAD}
+                        {Long \ButtonRCPlay / Long \ButtonRCDisplay}%
+                    &}
+                Zoom in / out, respectively
+                \\
+
+                % Zoom reset
+                \opt{SANSA_E200_PAD}
+                    {Long \ButtonSelect; Long \ButtonUp+\ButtonDown}
+                \opt{MROBE100_PAD}
+                    {Long \ButtonSelect; Long \ButtonPlay+\ButtonMenu}
+                \opt{SANSA_CLIP_PAD,SANSA_C200_PAD}
+                    {Long \ButtonSelect; Long \ButtonUp+\ButtonDown}
+                \opt{GIGABEAT_S_PAD}
+                    {Long \ButtonSelect; Long \ButtonUp+\ButtonDown}
+                \opt{IRIVER_H10_PAD}{Long \ButtonRew+\ButtonFF}
+                \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
+                    {Long \ButtonPlay+\ButtonMenu}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD}{Long \ButtonRCFF+\ButtonRCRew}%
+                    \opt{MROBE100_RC_PAD}{Long \ButtonRCHeart}%
+                  &}
+                Zoom reset
+                \\
+
+                % Tab previous / next
+                \opt{SANSA_E200_PAD,GIGABEAT_S_PAD,SANSA_C200_PAD%
+                    ,SANSA_CLIP_PAD,IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD%
+                    ,IPOD_1G2G_PAD,MROBE100_PAD}
+                    {\ButtonLeft / \ButtonRight}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD,MROBE100_RC_PAD}
+                        {\ButtonRCRew / \ButtonRCFF}%
+                    &}
+                Tab previous / next, respectively
+                \\
+
+                % Tab close
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD}{Long \ButtonPower}
+                \opt{GIGABEAT_S_PAD}{Long \ButtonPlay; Long \ButtonBack}
+                \opt{SANSA_CLIP_PAD}{Long \ButtonHome}
+                \opt{IRIVER_H10_PAD}{Long \ButtonLeft+\ButtonRight}
+                \opt{MROBE100_PAD}{Long \ButtonDisplay}
+                \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
+                    {Long \ButtonSelect+\ButtonMenu}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD}{Long \ButtonRCPlay}%
+                    &}
+                Tab close
+                \\
+
+                % History back / forward
+                \opt{SANSA_E200_PAD,GIGABEAT_S_PAD,SANSA_C200_PAD%
+                    ,SANSA_CLIP_PAD,IRIVER_H10_PAD,IPOD_4G_PAD,IPOD_3G_PAD%
+                    ,IPOD_1G2G_PAD,MROBE100_PAD}
+                    {Long \ButtonLeft / Long \ButtonRight}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{MROBE100_RC_PAD}{Long \ButtonRCRew / Long \ButtonRCFF}%
+                    &}
+                History back / forward
+                \\
+
+                % View full-screen
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD%
+                    ,GIGABEAT_S_PAD,MROBE100_PAD}
+                    {\ButtonSelect}
+                \opt{IRIVER_H10_PAD}{\ButtonPlay}
+                \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
+                    {Long \ButtonSelect+\ButtonPlay}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{GIGABEAT_RC_PAD}{\ButtonRCPlay}%
+                    \opt{MROBE100_RC_PAD}{\ButtonRCHeart}%
+                    &}
+                View full-screen toggle
+                \\
+            \end{btnmap}
+        \end{table}
+ 
+        {\opt{usb_hid_mouse}{
+        \item [Mouse.] This mode emulates a mouse. Features supported: Mouse
         movement; left and right button clicking; and dragging and dropping.
+
         \begin{table}
-          \begin{btnmap}{}{}
-            %
-            % Cursor move up / down / left / right
-            \opt{SANSA_E200_PAD,GIGABEAT_S_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD%
-                ,MROBE100_PAD}
-              {\ButtonUp / \ButtonDown / \ButtonLeft / \ButtonRight}
-            \opt{IRIVER_H10_PAD}
-              {\ButtonScrollUp / \ButtonScrollDown / \ButtonLeft / \ButtonRight}
-            \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
-              {\ButtonMenu / \ButtonPlay / \ButtonLeft / \ButtonRight}
-            \opt{HAVEREMOTEKEYMAP}{
+            \begin{btnmap}{}{}
+                % Cursor move up / down / left / right
+                \opt{SANSA_E200_PAD,GIGABEAT_S_PAD,SANSA_C200_PAD%
+                    ,SANSA_CLIP_PAD,MROBE100_PAD}
+                    {\ButtonUp / \ButtonDown / \ButtonLeft / \ButtonRight}
+                \opt{IRIVER_H10_PAD}{\ButtonScrollUp / \ButtonScrollDown / 
+                    \ButtonLeft / \ButtonRight}
+                \opt{IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
+                    {\ButtonMenu / \ButtonPlay / \ButtonLeft / \ButtonRight}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{MROBE100_RC_PAD}{\ButtonRCPlay / \ButtonRCDisplay / 
+                        \ButtonRCRew / \ButtonRCFF}%
+                    &}
+                Cursor move up / down / left / right, respectively
+                \\
+     
+                % Mouse button left-click
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
+                    ,IPOD_3G_PAD,IPOD_1G2G_PAD}
+                    {\ButtonSelect}
+                \opt{GIGABEAT_S_PAD}{\ButtonSelect; \ButtonBack}
+                \opt{IRIVER_H10_PAD}{\ButtonPlay}
+                \opt{MROBE100_PAD}{\ButtonMenu}
+                    &
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{MROBE100_RC_PAD}{\ButtonRCHeart}%
+                    &}
+                Left mouse button click
+                \\
+     
+                % Mouse button right-click
+                \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
+                \opt{GIGABEAT_S_PAD}{\ButtonMenu}
+                \opt{SANSA_CLIP_PAD}{\ButtonHome}
+                \opt{MROBE100_PAD}{\ButtonPlay}
                 &
-                \opt{MROBE100_RC_PAD}{\ButtonRCPlay / \ButtonRCDisplay / \ButtonRCRew / \ButtonRCFF}%
-            }
-            & Cursor move up / down / left / right, respectively \\
-            %
-            % Mouse button left-click
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD,SANSA_CLIP_PAD,IPOD_4G_PAD%
-                ,IPOD_3G_PAD,IPOD_1G2G_PAD}
-              {\ButtonSelect}
-            \opt{GIGABEAT_S_PAD}{\ButtonSelect; \ButtonBack}
-            \opt{IRIVER_H10_PAD}{\ButtonPlay}
-            \opt{MROBE100_PAD}{\ButtonMenu}
-            \opt{HAVEREMOTEKEYMAP}{
+                \opt{HAVEREMOTEKEYMAP}{
+                    &}
+                Right mouse button click
+                \\
+     
+                % Mouse wheel scroll up / down
+                \opt{SANSA_E200_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
+                    {\ButtonScrollBack / \ButtonScrollFwd}
+                \opt{IRIVER_H10_PAD}{\ButtonRew / \ButtonFF}
+                \opt{GIGABEAT_S_PAD}
+                    {\ButtonVolUp; \ButtonPrev / \ButtonVolDown; \ButtonNext}
+                \opt{SANSA_C200_PAD,SANSA_CLIP_PAD,MROBE100_PAD}
+                    {\ButtonVolUp / \ButtonVolDown}
                 &
-                \opt{MROBE100_RC_PAD}{\ButtonRCHeart}%
-            }
-            & Left mouse button click \\
-            %
-            % Mouse button right-click
-            \opt{SANSA_E200_PAD,SANSA_C200_PAD}{\ButtonPower}
-            \opt{GIGABEAT_S_PAD}{\ButtonMenu}
-            \opt{SANSA_CLIP_PAD}{\ButtonHome}
-            \opt{MROBE100_PAD}{\ButtonPlay}
-            \opt{HAVEREMOTEKEYMAP}{
-                &
-            }
-            & Right mouse button click \\
-            % Mouse wheel scroll up / down
-            \opt{SANSA_E200_PAD,IPOD_4G_PAD,IPOD_3G_PAD,IPOD_1G2G_PAD}
-              {\ButtonScrollBack / \ButtonScrollFwd}
-            \opt{IRIVER_H10_PAD}{\ButtonRew / \ButtonFF}
-            \opt{GIGABEAT_S_PAD}
-              {\ButtonVolUp; \ButtonPrev / \ButtonVolDown; \ButtonNext}
-            \opt{SANSA_C200_PAD,SANSA_CLIP_PAD,MROBE100_PAD}
-              {\ButtonVolUp / \ButtonVolDown}
-            \opt{HAVEREMOTEKEYMAP}{
-                &
-                \opt{MROBE100_RC_PAD}{\ButtonRCVolUp / \ButtonRCVolDown}%
-            }
-            & Mouse wheel scroll up / down, respectively \\
-          \end{btnmap}
+                \opt{HAVEREMOTEKEYMAP}{
+                    \opt{MROBE100_RC_PAD}{\ButtonRCVolUp / \ButtonRCVolDown}%
+                    &}
+                Mouse wheel scroll up / down, respectively
+                \\
+            \end{btnmap}
         \end{table}
     }}
     \end{description}
